--- a/src/styles/box.less
+++ b/src/styles/box.less
@@ -1,6 +1,5 @@
 .box {
   display: block;
-  width: 100%;
   background: @inverted;
   border-radius: @border-radius;
   box-shadow: @shadow;
@@ -8,6 +7,7 @@
   .box-header {
     padding: 12px 20px;
     font-size: 1.2em;
+    font-weight: 400;
     text-align: left;
     border-top-left-radius: @border-radius;
     border-top-right-radius: @border-radius;
