--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -1,351 +1,13 @@
 .react-select-wrapper {
-  top: -1px;
+  top: 21px;
+  font-size: 1rem;
+  line-height: 2.5rem;
   text-align: left;
   display: inline-block;
   min-width: 300px;
   position: relative;
   margin: 5px;
-  box-shadow: @shadow;
-  .is-disabled {
-    &>* {
-      cursor: not-allowed;
-    }
-  }
-  .Select.Select--multi .Select-value {
-    .Select-value-icon {
-      border-right: none;
-      &:hover {
-        background-color: initial;
-        color: inherit;
-      }
-    }
-  }
-  .select-icon-left {
-    position: absolute;
-  }
-  &.select-icon {
-    .Select.Select--single {
-      .Select-input {
-        padding-left: 0;
-      }
-    }
-    .Select.Select--multi {
-      .Select-input {
-        padding-left: 0;
-        margin-left: 0;
-      }
-    }
-  }
-  &:not(.select-icon) {
-    .Select.Select--single {
-      .Select-input {
-        padding-left: 10px;
-      }
-    }
-    .Select.Select--multi {
-      .Select-input {
-        padding-left: 0;
-      }
-    }
-  }
-  
-  .Select {    
-    width: 100%;
-    &.is-focused:not(.is-open) > .Select-control {
-      box-shadow: none !important;
-    }
-    &.is-open > .Select-control {
-      background: transparent;
-    }
-    &:focus {
-      outline: none !important;
-    }
-  }
-  .Select-control {
-    border-radius: @border-radius;
-    background: transparent;
-    border-width: 0 0 2px 0;
-    .Select-placeholder{
-      color: darken(@inverted, 15%) !important;
-    }
-  }
-  &.select-xs {
-    //top: 12px;
-    .Select.Select--single .Select-value {
-      top: -7px;
-    }
-    &.select-icon {
-      .Select.Select--single .Select-value {
-        padding-left: 26px;
-      }
-      .Select-placeholder,
-      .Select-multi-value-wrapper {
-        padding-left: 26px;
-      }
-    }
-    .select-icon-left {
-      top: 8px;
-      left: 10px;
-      font-size: .6em;
-    }
-    .Select-input, .Select-control, .Select-placeholder {
-      height: 22px;
-    }
-    .Select-value {
-      font-size: .6em;
-      margin-top: 2px;
-    }
-    .Select-placeholder, .Select-input > input {
-      line-height: 0.5em;
-      font-size: .6em;
-    }
-    .Select-placeholder {
-      padding-top: 10px;
-    }
-    .Select-input > input {
-      padding-top: 5px;
-    }
-    .Select-menu-outer {
-      font-size: .6em;
-    }
-  }
-  &.select-sm {
-    //top: 15px;
-    .Select.Select--single .Select-value {
-      top: -5px;
-    }
-    &.select-icon {
-      .Select.Select--single .Select-value {
-        padding-left: 26px;
-      }
-      .Select-placeholder,
-      .Select-multi-value-wrapper {
-        padding-left: 26px;
-      }
-    }
-    .select-icon-left {
-      top: 8px;
-      left: 10px;
-      font-size: .8em;
-    }
-    .Select-input, .Select-control, .Select-placeholder {
-      height: 28px;
-    }
-    .Select-value {
-      font-size: .8em;
-      margin-top: 2px;
-    }
-    .Select-placeholder, .Select-input > input {
-      line-height: 0.5em;
-      font-size: .8em;
-    }
-    .Select-placeholder {
-      padding-top: 11px;
-    }
-    .Select-input > input {
-      padding-top: 7px;
-    }
-    .Select-menu-outer {
-      font-size: .8em;
-    }
-  }
-  &.select-md {
-    //top: 18px;
-    .Select.Select--single .Select-value {
-      top: -4px;
-    }
-    &.select-icon {
-      .Select.Select--single .Select-value {
-        padding-left: 26px;
-      }
-      .Select-placeholder,
-      .Select-multi-value-wrapper {
-        padding-left: 26px;
-      }
-    }
-    .select-icon-left {
-      top: 10px;
-      left: 10px;
-      font-size: 1em;
-    }
-    .Select-input, .Select-control, .Select-placeholder {
-      height: 34px;
-    }
-    .Select-value {
-      font-size: 1em;
-      margin-top: 4px;
-    }
-    .Select-placeholder, .Select-input > input {
-      line-height: 0.5em;
-      font-size: 1em;
-    }
-    .Select-placeholder {
-      padding-top: 13px;
-    }
-    .Select-input > input {
-      padding-top: 9px;
-    }
-    .Select-menu-outer {
-      font-size: 1em;
-    }
-  }
-  &.select-lg {
-    //top: 21px;
-    .Select.Select--single .Select-value {
-      top: -2px;
-    }
-    &.select-icon {
-      .Select.Select--single .Select-value {
-        padding-left: 26px;
-      }
-      .Select-placeholder,
-      .Select-multi-value-wrapper {
-        padding-left: 26px;
-      }
-    }
-    .select-icon-left {
-      top: 14px;
-      left: 10px;
-      font-size: 1.1em;
-    }
-    .Select-input, .Select-control, .Select-placeholder {
-      height: 40px;
-    }
-    .Select-value {
-      font-size: 1.1em;
-      margin-top: 6px;
-    }
-    .Select-placeholder, .Select-input > input {
-      line-height: 0.5em;
-      font-size: 1.1em;
-    }
-    .Select-placeholder {
-      padding-top: 15px;
-    }
-    .Select-input > input {
-      padding-top: 11px;
-    }
-    .Select-menu-outer {
-      font-size: 1.1em;
-    }
-  }
-  &.select-xl {
-    //top: 22px;
-    .Select.Select--single .Select-value {
-      top: -2px;
-    }
-    &.select-icon {
-      .Select.Select--single .Select-value {
-        padding-left: 26px;
-      }
-      .Select-placeholder,
-      .Select-multi-value-wrapper {
-        padding-left: 26px;
-      }
-    }
-    .select-icon-left {
-      top: 16px;
-      left: 10px;
-      font-size: 1.2em;
-    }
-    .Select-input, .Select-control, .Select-placeholder {
-      height: 44.5px;
-    }
-    .Select-value {
-      font-size: 1.2em;
-      margin-top: 8px;
-    }
-    .Select-placeholder, .Select-input > input {
-      line-height: 0.5em;
-      font-size: 1.2em;
-    }
-    .Select-placeholder {
-      padding-top: 19px;
-    }
-    .Select-input > input {
-      padding-top: 13px;
-    }
-    .Select-menu-outer {
-      font-size: 1.2em;
-    }
-  }
-  &.select-default {
-    .select-icon-left {
-      color: darken(@app-bg-color, 15%);
-    }
-    .Select-control {
-      border-color: @border-color;
-    }
-    .Select.Select--multi .Select-value {
-      background: transparent;
-      border: 1px solid @primary;
-      color: @primary;
-    }
-  }
-
-  &.select-primary {
-    .select-icon-left {
-      color: @primary;
-    }
-    .Select-control {
-      border-color: @primary;
-    }
-    .Select.Select--multi .Select-value {
-      background: @primary;
-      border: 1px solid @primary;
-      color: @inverted;
-    }
-  }
-  &.select-success {
-    .select-icon-left {
-      color: @success;
-    }
-    .Select-control {
-      border-color: @success;
-    }
-    .Select.Select--multi .Select-value {
-      background: @success;
-      border: 1px solid @success;
-      color: @inverted;
-    }
-  }
-  &.select-info {
-    .select-icon-left {
-      color: @info;
-    }
-    .Select-control {
-      border-color: @info;
-    }
-    .Select.Select--multi .Select-value {
-      background: @info;
-      border: 1px solid @info;
-      color: @inverted;
-    }
-  }
-  &.select-warning {
-    .select-icon-left {
-      color: @warning;
-    }
-    .Select-control {
-      border-color: @warning;
-    }
-    .Select.Select--multi .Select-value {
-      background: @warning;
-      border: 1px solid @warning;
-      color: @inverted;
-    }
-  }
-  &.select-danger {
-    .select-icon-left {
-      color: @danger;
-    }
-    .Select-control {
-      border-color: @danger;
-    }
-    .Select.Select--multi .Select-value {
-      background: @danger;
-      border: 1px solid @danger;
-      color: @inverted;
-    }
+  .fa {
+    display: none;
   }
 }
