--- a/src/styles/form-group.less
+++ b/src/styles/form-group.less
@@ -31,7 +31,7 @@
     .form-control {
       display: flex;
       flex-direction: row;
-      align-items: baseline;
+      align-items: center;
       & > * {
         display: flex;
         &:not(:first-child) {
