Icon labeling for select component.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -34,3 +34,5 @@
 @sidemenu-width: 300px;
 @sidemenu-bg-color: #293135;
 @sidemenu-text-color: darken(@inverted, 10%);
+
+@placeholder-color: fade(darken(@inverted, 30%), 50%);
