--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -1,5 +1,3 @@
-@placeholder-color: fade(darken(@inverted, 30%), 50%);
-
 .react-select-wrapper {
   text-align: left;
   display: inline-block;
@@ -7,6 +5,33 @@
   min-width: 300px;
   margin: 5px;
   vertical-align: top;
+  &.select-icon {    
+    .fa {
+      position: absolute;
+      left: 8px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: @placeholder-color;
+    }
+    .Select--multi {
+      .Select-multi-value-wrapper {
+        padding-left: 21px;
+      }
+      .Select-input {
+        margin-left: 5px;
+      }
+      .Select-placeholder {
+        padding-left: 26px;
+      }
+    }
+    .Select--single {
+      .Select-placeholder, .Select-input, .Select-value {
+        padding-left: 26px;
+      }
+    }
+  }
+
+
   &.select-disabled {
     &, & * {
       cursor: not-allowed;
@@ -62,9 +87,6 @@
     .Select-value-label {
       padding-left: 0;
     }
-  }
-  .fa {
-    display: none;
   }
 
   &.select-default {
