Navbar click area fixed

--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -22,6 +22,7 @@
       padding: .8em 1em;
       text-align: left;
       font-size: 0.95em;
+      color: @default;
       border-radius: @border-radius;
       &:hover:not(:active), &:focus:not(:active) {
         background: darken(@inverted, 2%);
