--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -12,6 +12,7 @@
     text-decoration: none;
   }
   .navbar-brand {
+    color: @inverted;
     flex-grow: 0;
     display: flex;
     flex-direction: row;
@@ -20,7 +21,7 @@
     cursor: pointer;
     user-select: none;
     padding: 0 20px;
-    //border-right: 1px solid lighten(@nav-color, 3%);
+    border-right: 1px solid lighten(@nav-color, 3%);
     &:hover:not(:active) {
       background-color: darken(@nav-color, 2%);
     }
@@ -47,16 +48,24 @@
       flex-direction: row;
       &:last-child {
         .navbar-menu-item:last-child {
-          //border-left: 1px solid lighten(@nav-color, 3%);
+          border-left: 1px solid lighten(@nav-color, 3%);
         }
       }
       .navbar-menu-item {
         display: flex;
         cursor: pointer;
         user-select: none;
-        padding: 0 20px;
+        color: @inverted;
         align-self: stretch;
         align-items: center;
+        & > * {
+          padding: 0 20px;
+          flex-grow: 1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          align-self: stretch;
+        }
         &:hover:not(:active) {
           background-color: darken(@nav-color, 2%);
         }
