--- a/src/styles/sidemenu.less
+++ b/src/styles/sidemenu.less
@@ -10,6 +10,9 @@
   transition: left .4s ease;
   box-shadow: @shadow;
 
+  display: flex;
+  flex-direction: column;
+
   &:not(.sidemenu-opened) {
     left: calc(-1 * @sidemenu-width);
   }
@@ -18,12 +21,14 @@
   }
 
   .sidemenu-header {
+    flex-grow: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     height: @navbar-height;
     box-sizing: border-box;
     padding: 15px 20px;
+    border-top: 1px solid darken(@sidemenu-bg-color, 3%);
     border-bottom: 1px solid darken(@sidemenu-bg-color, 3%);
     user-select: none;
     .sidemenu-brand {
@@ -62,6 +67,10 @@
   }
 
   .sidemenu-list {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     user-select: none;
     max-height: ~'calc(100vh - @{navbar-height})';
     overflow-y: scroll;
@@ -80,4 +89,13 @@
       }
     }
   }
+}
+
+@media only screen and (max-width: 500px) {
+    .sidemenu {
+      flex-direction: column-reverse;
+      .sidemenu-list {
+        justify-content: flex-end;
+      }
+    }
 }
