--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -26,9 +26,6 @@
     }
     .fly {
       height: ~'calc(100vh - @{navbar-height})';
-      &.fly-opened {
-        top: @navbar-height;
-      }
     }
   }
   &.app-fixedfooter {
@@ -42,11 +39,17 @@
     }
     .fly {
       height: ~'calc(100vh - @{footer-height})';
+      &.fly-opened {
+        transform: translateX(-50%) translateY(~'calc(-100% - @{footer-height})');
+      }
     }
   }
   &.app-fixedfooter.app-fixednav {
     .fly {
       height: ~'calc(100vh - @{footer-height} - @{navbar-height})';
+      &.fly-opened {
+        transform: translateX(-50%) translateY(~'calc(-100% - @{footer-height})');
+      }
     }
   }
   .app-navigation {
